--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "lucide-react": "^0.298.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "next-themes": "^0.2.1",
     "openai": "^4.23.0",
     "react": "^18",
